hphp/hack/test/typecheck/nameof/parsing/nameof_prefixedstring.php.exp
File "nameof_prefixedstring.php", line 6, characters 12-25:
`nameof` can only be used with a class (Parsing[1002])
