hphp/hack/test/typecheck/nameof/parsing/nameof_prefixedstring.php
<?hh

class C {
  public static function f(): void {
    $foo = null;
    nameof re"hello $foo";
  }
}
